<resources>
    <string name="app_name">Swoosh-App</string>
    <string name="get_started">Get Started</string>
    <string name="go_all_in">Go All In</string>
    <string name="on_going_all_out">On Going All Out</string>
    <string name="find_a_team_in_your_city_dominate_the_league"><![CDATA[Find a team in your city & dominate
    \n the league]]></string>
    <string name="title_activity_league_screen">LeagueScreenActivity</string>
    <string name="next">next</string>
    <string name="desired_league">Desired League:</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co-ed</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">Beginner</string>
    <string name="baller">Baller</string>
    <string name="finish"></string>

</resources>
