<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_screen_bg"
    tools:context="arnold.agura.com.swoosh_app.WelcomeScreen">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="13dp"
        android:layout_marginLeft="16dp"
        android:textSize="15sp"
        android:layout_marginRight="16dp"
        android:background="@drawable/border_style"
        android:text="@string/get_started"
        android:textAllCaps="true" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="28dp"
        android:layout_height="wrap_content"
        android:src="@drawable/swoosh_logo"
        />
    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_all_in"
        android:layout_marginTop="20dp"
        android:textSize="58sp"
        android:textAllCaps="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logo"
        />
    <TextView
        android:id="@+id/subSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_going_all_out"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/slogan"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_a_team_in_your_city_dominate_the_league"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:layout_margin="15sp"
        android:textAlignment="center"
        android:layout_below="@+id/subSlogan"
        />
</RelativeLayout>
