<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/desired_league_bg"
    android:layout_height="match_parent"
    tools:context="arnold.agura.com.swoosh_app.LeagueScreen">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="28dp"
        android:layout_height="wrap_content"
        android:src="@drawable/swoosh_logo"
        />
    <TextView
        android:id="@+id/iamleague"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text=""
        android:layout_below="@+id/iamatxtleague"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="30sp"/>
    <TextView
        android:id="@+id/iamatxtleague"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="370dp"
        android:visibility="gone"
        android:textSize="15sp"
        android:text="@string/i_am_a" />
    <TextView
        android:id="@+id/desiredLeaguetxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/logo"
        android:layout_margin="15dp"
        android:textSize="15sp"
        android:text="@string/desired_league"/>
    <Button
        android:id="@+id/mensbg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/desiredLeaguetxt"
        android:layout_marginBottom="13dp"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/bgColor" />
    <Button
        android:id="@+id/womensbg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mensbg"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/bgColor"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/co_edbg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/womens"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/bgColor"/>
    <Button
        android:id="@+id/mens"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/desiredLeaguetxt"
        android:layout_marginBottom="13dp"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="16dp"
        android:textSize="15sp"
        android:layout_marginRight="16dp"
        android:background="@drawable/border_style"
        android:text="@string/mens"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/womens"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mens"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="16dp"
        android:textSize="15sp"
        android:layout_marginRight="16dp"
        android:background="@drawable/border_style"
        android:text="@string/womens"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/co_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/womens"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="16dp"
        android:textSize="15sp"
        android:layout_marginRight="16dp"
        android:background="@drawable/border_style"
        android:text="@string/co_ed"
        android:textAllCaps="false"/>
    <Button
        android:id="@+id/nextbg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="13dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/bgColor" />
    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="13dp"
        android:layout_marginLeft="16dp"
        android:textSize="15sp"
        android:layout_marginRight="16dp"
        android:background="@drawable/border_style"
        android:alpha="0.5"
        android:text="@string/next"
        android:enabled="false"
        android:textAllCaps="true" />

</RelativeLayout>
